<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/personalia_fragment"
    android:name=".Basics"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/fornavn_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/first_name_head"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/fornavn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/first_name_hint"
        android:inputType="textCapWords" />
    <TextView
        android:id="@+id/etternavn_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/last_name_head"
        android:textSize="12sp" />
    <EditText
        android:id="@+id/etternavn"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/last_name_hint"
        android:inputType="textCapWords" />
    <TextView
        android:id="@+id/foedt_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/foedt_head"
        android:textSize="12sp" />

	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    <Button
	        android:id="@+id/foedt_dato"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_weight="2"
	        android:layout_width="0px"
	        android:textSize="16sp"
	        android:layout_height="wrap_content" />
	    <Button
	        android:id="@+id/foedt_tid"
	        style="?android:attr/buttonStyleSmall"
	        android:layout_weight="1"
	        android:layout_width="0px"
	        android:textSize="16sp"
	        android:layout_height="wrap_content" />
	</LinearLayout>    

    <TextView
        android:id="@+id/personnr_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/personnr_head"
        android:textSize="12sp" />
	<EditText
        android:id="@+id/personnr"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/personnr_hint"
        android:inputType="number" />
    <TextView
        android:id="@+id/vekt_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/vekt_head"
        android:textSize="12sp" />
	<EditText
        android:id="@+id/vekt"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/vekt_hint"
        android:inputType="number" />
    <TextView
        android:id="@+id/lengde_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/lengde_head"
        android:textSize="12sp" />
	<EditText
        android:id="@+id/lengde"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/lengde_hint"
        android:inputType="numberDecimal" />
    <TextView
        android:id="@+id/hodeomkrets_head"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/hodeomkrets_head"
        android:textSize="12sp" />
	<EditText
        android:id="@+id/hodeomkrets"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hodeomkrets_hint"
        android:inputType="numberDecimal" />
	     
    	<LinearLayout
	        android:layout_width="fill_parent"
	        android:layout_height="wrap_content"
		    android:orientation="horizontal" >
		    <Button
		        android:id="@+id/cancel"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_weight="1"
		        android:layout_width="0px"
		        android:layout_height="wrap_content"
		        android:text="@string/cancel" 
		        android:textColor="#33B5E5" />
		    <Button
		        android:id="@+id/save"
		        style="?android:attr/buttonStyleSmall"
		        android:layout_weight="1"
		        android:layout_width="0px"
		        android:layout_height="wrap_content"
		        android:text="@string/save" 
		        android:textColor="#33B5E5" />
	</LinearLayout>    

</LinearLayout>